reworked to  POST method