@@ -1,8 +1,9 @@
 import java.io.BufferedReader;
+import java.io.DataOutputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URI;
 import java.net.URL;
+import java.net.URLEncoder;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -12,7 +13,10 @@ import java.util.Map;
 https://oauth.vk.com/authorize?client_id=5381172&display=page&redirect_uri=https://oauth.vk.com/blank.html&scope=wall,offline&response_type=token&v=5.50
  */
 public class VK {
-    private final static String OWNER_ID = "118193284";
+    //prod
+//    private final static String OWNER_ID = "118193284";
+    //test
+    private final static String OWNER_ID = "119022967";
     private final static String acces_token = "87582bf6f41a1bded77beede5c51a14b69c42669f7afdd86ef673bea2b0f731c406c10fff8d8b54d8e3b5";
 //
     public static void main(String[] args) throws Exception {
@@ -23,27 +27,25 @@ public class VK {
         pars.put("owner_id", "-" + OWNER_ID);
         pars.put("from_group", "1");
         pars.put("access_token", acces_token);
-        pars.put("message", message);
-//        pars.put("publish_date", "1460054814");
+        pars.put("message", URLEncoder.encode(message, "UTF-8"));
+        pars.put("publish_date", "0");
 
         for (Map.Entry<String, String> e : pars.entrySet())
             query.add(e.getKey() + "=" + e.getValue());
 
-        URI uri = new URI(
-                "https",
-                "api.vk.com",
-                "/method/wall.post",
-                String.join("&", query),
-                null);
-        String url = uri.toASCIIString();
-
-        URL obj = new URL(url);
+        URL obj = new URL("https://api.vk.com/method/wall.post");
         HttpURLConnection con = (HttpURLConnection) obj.openConnection();
 
-        con.setRequestMethod("GET");
+        con.setRequestMethod("POST");
+
+        // Send post request
+        con.setDoOutput(true);
+        DataOutputStream wr = new DataOutputStream(con.getOutputStream());
+        wr.writeBytes(String.join("&", query));
+        wr.flush();
+        wr.close();
 
         int responseCode = con.getResponseCode();
-        System.out.println("\nSending 'GET' request to URL :\n " + url);
         System.out.println("Response Code : " + responseCode);
 
         BufferedReader in = new BufferedReader(
@@ -57,8 +59,5 @@ public class VK {
 
         //print result
         System.out.println(response.toString());
-    }
-    private static String p(String par, String val) {
-        return par + "=" + val;
     }
 }
